make sure edit/delete links are always right aligned

--- a/views/common/note/note.css
+++ b/views/common/note/note.css
@@ -107,6 +107,7 @@
 .Note-meta {
   display: flex;
   gap: 1rem;
+  margin-left: auto;
 }
 
 .Note-footer--full .Note-meta {
